--- a/examples/integration/.bazelrc
+++ b/examples/integration/.bazelrc
@@ -15,5 +15,8 @@ build:rules_xcodeproj --@build_bazel_rules_swift//swift:universal_tools
 
 build --test_env=INTEGRATION_TEST_ENV_VAR=TRUE
 
+# This example doesn't support bzlmod yet
+build --noexperimental_enable_bzlmod
+
 # Use a user.bazelrc if it exists
 try-import %workspace%/user.bazelrc
